# yadro-telecom-task

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Utils.cmake
include/: client.h  club.h  event.h  event_handler.h  event_response.h  table.h  validator.h
source/: client.cpp  club.cpp  event.cpp  event_handler.cpp  event_response.cpp  main.cpp  table.cpp  validator.cpp
tests/: test_club.cpp  test_validator.cpp
tests/static/: expected_output.txt  non_existing_eventID.txt  test_invalid_time_format.txt  test_no_club_parameters.txt  test_reversed_timestamps.txt
util/: time_utils.h
